--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,5 @@
 @import 'vendors/reset';
-
-@import 'global/layout;
+@import 'global/layout';
+@import 'blocs/home';
+@import 'blocs/game';
+@import 'blocs/end';
