add google font, fixes

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,7 @@
 @import 'vendors/reset';
 
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+
 @import 'global/layout';
 
 @import 'global/home';
