--- a/src/scss/global/home.scss
+++ b/src/scss/global/home.scss
@@ -41,6 +41,7 @@
 		border: 3px solid #000000;
 		box-sizing: border-box;
 		border-radius: 5px;	
+		pointer-events: auto;
 
 		&:hover {
 			transform: scale(1.05);
