--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -2,15 +2,12 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
-	font-family: abc, sans-serif;
+	font-family: 'Press Start 2P', cursive;
 	background-image: url("/img/back.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-weight: bold;
-}
-
-@font-face {
-	font-family: "abc";
-	src: url("/fonts/abc.ttf") format("truetype");
+	pointer-events: none;
+	user-select: none;
 }
