--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -1,6 +1,6 @@
 .game {
 	display: flex;
-	
+
 	justify-content: center;
 
 	.game__score {
@@ -8,7 +8,21 @@
 		top: 5%;
 		font-size: 20px;
 	}
-	.game__zone{
-	 width: 100
+
+	.smog {
+		width: 40px;
+		height: 40px;
+		position: absolute;
+		left: 50%;
+		background-color: blue;
+		transform: translateY(200px)
+	}
+
+	.floor {
+		background-color: red;
+		width: 100%;
+		height: 88px;
+		bottom: 0;
+		position: fixed;
 	}
 }
