--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -19,9 +19,9 @@
 	}
 
 	.floor {
-		background-color: red;
+		background-color: rgba(0, 0, 0, .5);
 		width: 100%;
-		height: 88px;
+		height: 148px;
 		bottom: 0;
 		position: fixed;
 	}
