--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -1,6 +1,5 @@
 .game {
 	display: flex;
-
 	justify-content: center;
 
 	.game__score {
@@ -10,19 +9,15 @@
 	}
 
 	.smog {
-		width: 40px;
-		height: 40px;
+		height: 100px;
 		position: absolute;
-		left: 50%;
-		background-color: blue;
-		transform: translateY(200px)
 	}
 
 	.floor {
-		background-color: rgba(0, 0, 0, .5);
+		// background-color: rgba(0, 0, 0, .5);
 		width: 100%;
 		height: 148px;
 		bottom: 0;
-		position: fixed;
+		position: absolute;
 	}
 }
