--- a/src/scss/global/end.scss
+++ b/src/scss/global/end.scss
@@ -11,7 +11,7 @@
 	}
 
 	.end__img {
-		margin: 50px 0;
+		margin: 30px 0;
 		animation: shake 1s ease-in-out infinite;
 		height: 200px;
 	}
@@ -36,6 +36,14 @@
 
 	.end__score {
 		font-size: 20px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		.score__data{
+			margin-top: 20px;
+			font-size: 30px;
+		}
 	}
 
 	.end__instructions {
