--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -12,12 +12,13 @@
 		height: 100px;
 		position: absolute;
 		left: 15%;
+		// transition: all .3s ease-in-out;
 	}
 
 	.game__foor {
 		// background-color: rgba(0, 0, 0, .5);
 		width: 100%;
-		height: 148px;
+		height: 63px;
 		bottom: 0;
 		position: absolute;
 	}
