--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -3,7 +3,7 @@ body {
 	height: 100vh;
 	overflow: hidden;
 	font-family: 'Press Start 2P', cursive;
-	background-image: url("/img/back.jpg");
+	background-image: url("/img/back.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
