--- a/src/scss/global/layout.scss
+++ b/src/scss/global/layout.scss
@@ -2,10 +2,9 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
+	position: fixed;
 	font-family: 'Press Start 2P', cursive;
 	background-image: url("/img/back.png");
-	background-position: center;
-	background-repeat: no-repeat;
 	background-size: cover;
 	font-weight: bold;
 	pointer-events: none;
