--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -28,7 +28,7 @@
 
 .sky {
 	height: 450px;
-	border: 2px solid #fff;
+	// border: 2px solid #fff;
 }
 
 .factory {
@@ -41,7 +41,7 @@
 }
 .factory__zone{
 	height: 200px;
-	border: 2px solid red;
+	// border: 2px solid red;
 
 }
 .blackCloud {
