--- a/src/scss/global/game.scss
+++ b/src/scss/global/game.scss
@@ -28,6 +28,9 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		background-image: url("/img/cloud_happy.png");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
 	}
 
 	.game__floor {
